# ChangeLog for app-text/an
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/an/ChangeLog,v 1.50 2014/10/12 08:55:53 ago Exp $

  12 Oct 2014; Agostino Sarubbo <ago@gentoo.org> an-1.2.ebuild:
  Stable for x86, wrt bug #519410

  05 Oct 2014; Agostino Sarubbo <ago@gentoo.org> an-1.2.ebuild:
  Stable for ppc, wrt bug #519410

  14 Sep 2014; Agostino Sarubbo <ago@gentoo.org> an-1.2.ebuild:
  Stable for ppc64, wrt bug #519410

  09 Sep 2014; Chema Alonso <nimiux@gentoo.org> an-1.2.ebuild:
  Stable for amd64 wrt bug #519410

  09 Aug 2014; Jeroen Roovers <jer@gentoo.org> an-1.2.ebuild:
  Stable for HPPA (bug #519410).

*an-1.2 (02 Jul 2014)

  02 Jul 2014; Jeroen Roovers <jer@gentoo.org> +an-1.2.ebuild:
  Version bump.

  02 Mar 2014; Jeroen Roovers <jer@gentoo.org> an-1.1.ebuild:
  Add dev-libs/icu sub-SLOT dependency (bug #455900).

  28 Jul 2013; Jeroen Roovers <jer@gentoo.org> -an-0.95.3.2.ebuild:
  Old.

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> an-1.1.ebuild:
  Stable for x86, wrt bug #476852

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> an-1.1.ebuild:
  Stable for ppc64, wrt bug #476852

  22 Jul 2013; Agostino Sarubbo <ago@gentoo.org> an-1.1.ebuild:
  Stable for ppc, wrt bug #476852

  15 Jul 2013; Chema Alonso <nimiux@gentoo.org> an-1.1.ebuild:
  Stable for amd64 wrt bug #476852

  15 Jul 2013; Jeroen Roovers <jer@gentoo.org> an-1.1.ebuild:
  Stable for HPPA (bug #476852).

  11 Jun 2013; Jeroen Roovers <jer@gentoo.org> an-1.1.ebuild:
  Fix LICENSE.

*an-1.1 (11 Jun 2013)

  11 Jun 2013; Jeroen Roovers <jer@gentoo.org> -an-0.95.3.ebuild,
  +an-1.1.ebuild, -files/an_0.95-3.diff:
  Version bump.

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> an-0.95.3.ebuild,
  an-0.95.3.2.ebuild:
  Drop alpha keywords

  12 Sep 2012; Jeroen Roovers <jer@gentoo.org> -files/an-0.95-make.patch:
  Remove unused patch by jalan (bug #344183).
