@@ -1,12 +1,0 @@
-DEFINED_PHASES=install prepare
-DEPEND=dev-libs/icu:=
-DESCRIPTION=Very fast anagram generator with dictionary lookup
-EAPI=5
-HOMEPAGE=http://packages.debian.org/unstable/games/an
-KEYWORDS=amd64 hppa ppc ppc64 x86
-LICENSE=GPL-2
-RDEPEND=dev-libs/icu:= sys-apps/miscfiles[-minimal]
-SLOT=0
-SRC_URI=mirror://debian/pool/main/a/an/an_1.1.orig.tar.bz2
-_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=a26f10222d3d4c0578683c62c5df9004
